--- a/business-intelligence/performance-management.html
+++ b/business-intelligence/performance-management.html
@@ -18,18 +18,18 @@
                     </header>
                     <div class="content">
                         <p>
-                            <strong>Performance management</strong> has advanced markedly with the integration of business intelligence (BI), AI, and analytics. Organizations deploying modern BI-enhanced performance management achieve significantly better employee outcomes, process efficiency, and evidence-based decision-making. Notably, recent <em>Harvard Business Review</em> analyses and Gartner research (2024–2025) indicate AI-enabled systems correlate with up to 40% higher retention, 50% greater goal alignment, and major improvements in feedback quality and timing.<sup>[1][2][3]</sup>
+                            <strong>Performance management</strong> has advanced markedly with the integration of business intelligence (BI), AI, and analytics. Organizations deploying modern BI-enhanced performance management achieve significantly better employee outcomes, process efficiency, and evidence-based decision-making. Notably, recent <em>Harvard Business Review</em> analyses and Gartner research (2024–2025) indicate AI-enabled systems correlate with up to 40% higher retention, 50% greater goal alignment, and major improvements in feedback quality and timing.
                         </p>
 
                         <h3>1. AI-Driven Performance Management Platforms</h3>
                         <ul>
                             <li>
                                 <strong>Automated Data Collection & Analysis:</strong>
-                                Modern platforms use AI and analytics to aggregate performance data from work systems (e.g., collaboration tools, project management, communication platforms), automate trend analysis, and highlight development opportunities while mitigating rater bias.<sup>[2][4]</sup>
+                                Modern platforms use AI and analytics to aggregate performance data from work systems (e.g., collaboration tools, project management, communication platforms), automate trend analysis, and highlight development opportunities while mitigating rater bias.
                             </li>
                             <li>
                                 <strong>Real-Time Dashboards & Predictive Analytics:</strong>
-                                BI dashboards provide managers and HR with up-to-date metrics on goal progress, skills gaps, and risk of attrition, while predictive analytics enables targeted interventions.<sup>[5]</sup>
+                                BI dashboards provide managers and HR with up-to-date metrics on goal progress, skills gaps, and risk of attrition, while predictive analytics enables targeted interventions.
                             </li>
                         </ul>
 
@@ -37,15 +37,15 @@
                         <ul>
                             <li>
                                 <strong>Ongoing, Data-Informed Feedback:</strong>
-                                Moving beyond annual reviews, state-of-the-art systems encourage continuous peer/manager feedback, aligning observations with objective metrics. Evidence shows continuous feedback is linked to higher performance and engagement.<sup>[3]</sup>
+                                Moving beyond annual reviews, state-of-the-art systems encourage continuous peer/manager feedback, aligning observations with objective metrics. Evidence shows continuous feedback is linked to higher performance and engagement.
                             </li>
                             <li>
                                 <strong>Personalized Coaching and Nudges:</strong>
-                                AI-enabled platforms can deliver individualized guidance and learning suggestions based on performance data trends and behavioral analysis.<sup>[6]</sup>
+                                AI-enabled platforms can deliver individualized guidance and learning suggestions based on performance data trends and behavioral analysis.
                             </li>
                             <li>
                                 <strong>OKRs and Outcome-Based Goal Setting:</strong>
-                                Many organizations are shifting to Objectives and Key Results (OKRs) frameworks—making performance measurement more transparent and directly linked to strategic outcomes.<sup>[7]</sup>
+                                Many organizations are shifting to Objectives and Key Results (OKRs) frameworks—making performance measurement more transparent and directly linked to strategic outcomes.
                             </li>
                         </ul>
 
@@ -53,11 +53,11 @@
                         <ul>
                             <li>
                                 <strong>Skills and Competency Analytics:</strong>
-                                Performance BI solutions map individual and workforce competencies to future role requirements, informing upskilling plans.<sup>[3][8]</sup>
+                                Performance BI solutions map individual and workforce competencies to future role requirements, informing upskilling plans.
                             </li>
                             <li>
                                 <strong>Learning Analytics Integration:</strong>
-                                Seamless connection of LMS/LXP (Learning Experience Platforms) data into performance dashboards allows organizations to track impact of training on business outcomes.<sup>[4]</sup>
+                                Seamless connection of LMS/LXP (Learning Experience Platforms) data into performance dashboards allows organizations to track impact of training on business outcomes.
                             </li>
                         </ul>
 
@@ -65,11 +65,11 @@
                         <ul>
                             <li>
                                 <strong>Transparency and Explainability:</strong>
-                                Leading tools provide explainable AI features (feature importance, rationale for ratings), increasing trust and regulatory compliance.<sup>[9]</sup>
+                                Leading tools provide explainable AI features (feature importance, rationale for ratings), increasing trust and regulatory compliance.
                             </li>
                             <li>
                                 <strong>Bias Detection:</strong>
-                                Modern systems implement regular bias checks, ensuring recommendations and ratings are fair across demographic segments.<sup>[10]</sup>
+                                Modern systems implement regular bias checks, ensuring recommendations and ratings are fair across demographic segments.
                             </li>
                         </ul>
 
@@ -77,64 +77,22 @@
                         <ul>
                             <li>
                                 <strong>Affective Analytics for Engagement:</strong>
-                                Emerging research supports the use of affective computing (facial, speech, or behavioral analytics) to monitor employee well-being or engagement in digital or hybrid settings. Ethical use requires transparency and opt-in.<sup>[11][12]</sup>
+                                Emerging research supports the use of affective computing (facial, speech, or behavioral analytics) to monitor employee well-being or engagement in digital or hybrid settings. Ethical use requires transparency and opt-in.
                             </li>
                         </ul>
 
                         <pre><code class="language-python">
-# Example: Real-time AI-driven feedback summarization (pseudocode)
-def process_feedback(feedback_texts):
-    sentiment_scores = [nlp_sentiment_analysis(text) for text in feedback_texts]
-    summary = nlp_generate_summary(feedback_texts)
-    if min(sentiment_scores) < 0.5:
-        notify_manager(summary)
-    return summary
+                        # Example: Real-time AI-driven feedback summarization (pseudocode)
+                        def process_feedback(feedback_texts):
+                        sentiment_scores = [nlp_sentiment_analysis(text) for text in feedback_texts]
+                        summary = nlp_generate_summary(feedback_texts)
+                        if min(sentiment_scores) < 0.5:
+                            notify_manager(summary)
+                            return summary
                         </code></pre>
-
-                        <p>
-                            <em>Organizations embracing these practices see faster adaptation to change, greater workforce engagement, and measurable improvement in business performance.</em>
-                        </p>
-
+                        <p><em>Organizations embracing these practices see faster adaptation to change, greater workforce engagement, and measurable improvement in business performance.</em> </p>
                         <hr>
-                        <h3>References</h3>
-                        <ol>
-                            <li>
-                                Behson, S. (2023). "Performance Management for the Hybrid Workplace," <em>Harvard Business Review</em>.
-                            </li>
-                            <li>
-                                Gartner. (2025). <em>Market Guide for Workforce Performance Management Applications</em>.
-                            </li>
-                            <li>
-                                Bersin, J. (2024). "The Definitive Guide to Performance Management in 2024," <em>Josh Bersin Company</em>.
-                            </li>
-                            <li>
-                                Tafvelin, S. et al. (2022). "Continuous Feedback: Effects on Performance and Engagement," <em>Journal of Business and Psychology</em>, 37, 1085–1103.
-                            </li>
-                            <li>
-                                Forrester. (2024). <em>Now Tech: Performance Management and Employee Success Platforms</em>.
-                            </li>
-                            <li>
-                                Terblanche, N. H. D. (2022). "The effectiveness of AI-powered coaching," <em>Frontiers in Psychology</em>, 13, 971313.
-                            </li>
-                            <li>
-                                Doerr, J., & Achieve. (2023). <em>Measure What Matters: Using OKRs</em>. Portfolio/Penguin.
-                            </li>
-                            <li>
-                                LinkedIn Learning. (2023). <em>2023 Workplace Learning Report</em>.
-                            </li>
-                            <li>
-                                Molnar, C. (2023). <em>Interpretable Machine Learning</em> (2nd Ed.).
-                            </li>
-                            <li>
-                                Bogen, M., Rieke, A., Ahmed, S., & Green, B. (2023). "Awareness in Algorithmic Bias in HR Practice," <em>ACM FAccT</em>.
-                            </li>
-                            <li>
-                                Calvo, R. A., D’Mello, S. K., Gratch, J., & Kappas, A. (2023). "Affective Computing and Emotional Analytics," <em>Annual Review of Psychology</em>, 74, 95–129.
-                            </li>
-                            <li>
-                                IBM Research. (2024). "Responsible Use of AI for Employee Wellbeing Monitoring."
-                            </li>
-                        </ol>
+                     
                     </div>
                     <footer>
                         <a href="../index.html#three" class="button">Back to Business Intelligence</a>
