--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/developerjp/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/jpark8215" class="icon brands fa-github"><span class="label">Github</span></a></li>
-					<li><a href="contact.html" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
-				</ul>
+<!-- 					<li><a href="contact.html" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
+				</ul> -->
 			</footer>
 		</section>
 
