--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE HTML>
 <!--
-	html5up.net | @ajlkn
+	Data Analytics and Beyond - Modern Professional Website
+	Based on html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
-		<title>Data Analytics and Beyond </title>
+		<title>Data Analytics and Beyond | Professional Analytics Solutions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Professional data analytics, AI/ML solutions, and business intelligence services. Transform your business with cutting-edge technology and insights." />
+		<meta name="keywords" content="data analytics, artificial intelligence, machine learning, business intelligence, big data, automation" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 		<section id="header">
 			<header>
-				<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
-				<h1 id="logo"><a href="#">DA & Beyond</a></h1>
-				<p> <br /> </p>
+				<span class="image avatar"><img src="images/avatar.png" alt="Data Analytics Professional" /></span>
+				<h1 id="logo"><a href="#">Data Analytics & Beyond</a></h1>
+				<p>Transforming Business Through Data-Driven Insights</p>
 			</header>
 			<nav id="nav">
 				<ul>
 					<li><a href="#one" class="active">About</a></li>
-					<li><a href="#two">AI/ML</a></li>
+					<li><a href="#two">AI/ML Solutions</a></li>
 					<li><a href="#three">Business Intelligence</a></li>
-					<!-- <li><a href="#four">Contact</a></li> -->
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
 			<footer>
 				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/developerjp/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/jpark8215" class="icon brands fa-github"><span class="label">Github</span></a></li>
-<!-- 					<li><a href="contact.html" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
-				</ul> -->
+					<li><a href="https://www.linkedin.com/in/developerjp/" class="icon brands fa-linkedin" aria-label="LinkedIn Profile"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/jpark8215" class="icon brands fa-github" aria-label="GitHub Profile"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:contact@dataanalytics.com" class="icon solid fa-envelope" aria-label="Email Contact"><span class="label">Email</span></a></li>
+				</ul>
 			</footer>
 		</section>
 
@@ -45,88 +51,185 @@
 
 				<!-- One -->
 				<section id="one">
-					<!-- <div class="image main" data-position="center">
-						<img src="images/banner.jpg" alt="" />
-					</div> -->
 					<div class="container">
 						<header class="major">
 							<h2>Data Analytics and Beyond</h2>
-							<p>Just a simple site to learn about data analytics </p>
+							<p>Empowering businesses with cutting-edge analytics, AI, and machine learning solutions</p>
 						</header>
-						<p>Whether you're a seasoned professional or just starting out, this website offers valuable insights, tutorials, and resources to help you navigate the ever-evolving world of data science, analytics, and cutting-edge technology. Dive into curated content, stay updated with the latest trends, and join a community of tech enthusiasts eager to learn and grow together.</p>
+						<div class="hero-content">
+							<p>Whether you're a seasoned professional or just starting your data journey, this platform offers comprehensive insights, tutorials, and resources to help you navigate the ever-evolving world of data science, analytics, and cutting-edge technology. Our curated content keeps you updated with the latest trends while providing practical solutions for real-world challenges.</p>
+							
+							<div class="key-features">
+								<div class="feature-card">
+									<i class="fas fa-chart-line"></i>
+									<h4>Advanced Analytics</h4>
+									<p>Transform raw data into actionable insights</p>
+								</div>
+								<div class="feature-card">
+									<i class="fas fa-robot"></i>
+									<h4>AI/ML Solutions</h4>
+									<p>Leverage artificial intelligence for business growth</p>
+								</div>
+								<div class="feature-card">
+									<i class="fas fa-database"></i>
+									<h4>Data Management</h4>
+									<p>Secure, scalable, and efficient data infrastructure</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
 
 				<!-- Two -->
 				<section id="two">
 					<div class="container">
-						<h3>AI/ML Solutions</h3>
-						<p>Leveraging artificial intelligence and machine learning to transform businesses and drive innovation.</p>
-						<ul class="feature-icons">
-							<li class="icon solid fa-robot">
-								<a href="solutions/ai-implementation.html">AI Implementation</a>
-							</li>
-							<li class="icon solid fa-cogs">
-								<a href="solutions/automation.html">Process Automation</a>
-							</li>
-							<li class="icon solid fa-database">
-								<a href="solutions/big-data.html">Big Data Analytics</a>
-							</li>
-							<li class="icon solid fa-cloud">
-								<a href="solutions/cloud-ai.html">Cloud AI Solutions</a>
-							</li>
-							<li class="icon solid fa-brain">
-								<a href="solutions/machine-learning.html">Machine Learning Models</a>
-							</li>
-							<li class="icon solid fa-network-wired">
-								<a href="solutions/neural-networks.html">Neural Networks</a>
-							</li>
-						</ul>
+						<header class="major">
+							<h3>AI/ML Solutions</h3>
+							<p>Leveraging artificial intelligence and machine learning to transform businesses and drive innovation</p>
+						</header>
+						<div class="solutions-grid">
+							<div class="solution-card">
+								<div class="solution-icon">
+									<i class="fas fa-robot"></i>
+								</div>
+								<h4><a href="solutions/ai-implementation.html">AI Implementation</a></h4>
+								<p>Strategic AI adoption frameworks for healthcare, finance, and enterprise applications</p>
+								<a href="solutions/ai-implementation.html" class="button small">Learn More</a>
+							</div>
+							<div class="solution-card">
+								<div class="solution-icon">
+									<i class="fas fa-cogs"></i>
+								</div>
+								<h4><a href="solutions/automation.html">Process Automation</a></h4>
+								<p>Intelligent automation solutions to streamline operations and reduce costs</p>
+								<a href="solutions/automation.html" class="button small">Learn More</a>
+							</div>
+							<div class="solution-card">
+								<div class="solution-icon">
+									<i class="fas fa-database"></i>
+								</div>
+								<h4><a href="solutions/big-data.html">Big Data Analytics</a></h4>
+								<p>Scalable solutions for processing and analyzing massive datasets</p>
+								<a href="solutions/big-data.html" class="button small">Learn More</a>
+							</div>
+							<div class="solution-card">
+								<div class="solution-icon">
+									<i class="fas fa-cloud"></i>
+								</div>
+								<h4><a href="solutions/cloud-ai.html">Cloud AI Solutions</a></h4>
+								<p>Cloud-native AI services for scalable and cost-effective deployments</p>
+								<a href="solutions/cloud-ai.html" class="button small">Learn More</a>
+							</div>
+							<div class="solution-card">
+								<div class="solution-icon">
+									<i class="fas fa-brain"></i>
+								</div>
+								<h4><a href="solutions/machine-learning.html">Machine Learning Models</a></h4>
+								<p>Custom ML models tailored to your specific business needs</p>
+								<a href="solutions/machine-learning.html" class="button small">Learn More</a>
+							</div>
+							<div class="solution-card">
+								<div class="solution-icon">
+									<i class="fas fa-network-wired"></i>
+								</div>
+								<h4><a href="solutions/neural-networks.html">Neural Networks</a></h4>
+								<p>Deep learning solutions for complex pattern recognition and prediction</p>
+								<a href="solutions/neural-networks.html" class="button small">Learn More</a>
+							</div>
+						</div>
 					</div>
 				</section>
 
 				<!-- Three -->
 				<section id="three">
 					<div class="container">
-						<h3>Business Intelligence</h3>
-						<p>Transform your data into actionable insights with comprehensive business intelligence solutions.</p>
+						<header class="major">
+							<h3>Business Intelligence</h3>
+							<p>Transform your data into actionable insights with comprehensive business intelligence solutions</p>
+						</header>
 						<div class="features">
-							<article>
-								<a href="business-intelligence/bi-tools.html" class="image"><img src="images/pic03.png" alt="" /></a>
+							<article class="feature-article">
+								<a href="business-intelligence/bi-tools.html" class="image">
+									<img src="images/pic03.png" alt="BI Tools and Technology" />
+								</a>
 								<div class="inner">
-									<a href="business-intelligence/bi-tools.html" class="text"><h4>BI Tools and Technology</h4></a>
-									<p>Leverage cutting-edge BI tools and technology to gain deeper insights and drive strategic business decisions.</p>
+									<h4><a href="business-intelligence/bi-tools.html">BI Tools and Technology</a></h4>
+									<p>Leverage cutting-edge BI tools and technology to gain deeper insights and drive strategic business decisions. Explore modern platforms like Tableau, Power BI, and Looker.</p>
+									<a href="business-intelligence/bi-tools.html" class="button small">Explore Tools</a>
 								</div>
 							</article>
-							<article>
-								<a href="business-intelligence/data-management.html" class="image"><img src="images/pic01.png" alt="" /></a>
+							<article class="feature-article">
+								<a href="business-intelligence/data-management.html" class="image">
+									<img src="images/pic01.png" alt="Data Management" />
+								</a>
 								<div class="inner">
-									<a href="business-intelligence/data-management.html" class="text"><h4>Data Management</h4></a>
-									<p>Ensure your data is accurate, accessible, and secure, enabling better decision-making and operational efficiency.</p>
+									<h4><a href="business-intelligence/data-management.html">Data Management</a></h4>
+									<p>Ensure your data is accurate, accessible, and secure, enabling better decision-making and operational efficiency across your organization.</p>
+									<a href="business-intelligence/data-management.html" class="button small">Learn More</a>
 								</div>
 							</article>
-							<article>
-								<a href="business-intelligence/performance-management.html" class="image"><img src="images/pic02.png" alt="" /></a>
+							<article class="feature-article">
+								<a href="business-intelligence/performance-management.html" class="image">
+									<img src="images/pic02.png" alt="Performance Management" />
+								</a>
 								<div class="inner">
-									<a href="business-intelligence/performance-management.html" class="text"><h4>Performance Management</h4></a>
-									<p>Optimize your business performance with advanced management solutions, tailored to meet your organizational goals.</p>
+									<h4><a href="business-intelligence/performance-management.html">Performance Management</a></h4>
+									<p>Optimize your business performance with advanced management solutions, tailored to meet your organizational goals and KPIs.</p>
+									<a href="business-intelligence/performance-management.html" class="button small">Discover Solutions</a>
 								</div>
 							</article>
 						</div>
 					</div>
 				</section>
 
+				<!-- Contact Section -->
+				<section id="contact">
+					<div class="container">
+						<header class="major">
+							<h3>Get In Touch</h3>
+							<p>Ready to transform your business with data-driven insights?</p>
+						</header>
+						<div class="contact-content">
+							<div class="contact-info">
+								<div class="contact-item">
+									<i class="fas fa-envelope"></i>
+									<div>
+										<h4>Email</h4>
+										<p><a href="mailto:contact@dataanalytics.com">contact@dataanalytics.com</a></p>
+									</div>
+								</div>
+								<div class="contact-item">
+									<i class="fab fa-linkedin"></i>
+									<div>
+										<h4>LinkedIn</h4>
+										<p><a href="https://www.linkedin.com/in/developerjp/" target="_blank">Connect with us</a></p>
+									</div>
+								</div>
+								<div class="contact-item">
+									<i class="fab fa-github"></i>
+									<div>
+										<h4>GitHub</h4>
+										<p><a href="https://github.com/jpark8215" target="_blank">View our projects</a></p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
 				<!-- Footer -->
 				<section id="footer">
-					<!-- <div class="container"> -->
+					<div class="container">
 						<ul class="copyright">
-							<li>&copy; developerjp. All rights reserved.</li>
-							<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+							<li>&copy; 2024 Data Analytics and Beyond. All rights reserved.</li>
+							<li>Professional Analytics Solutions</li>
 						</ul>
-					<!-- </div> -->
+					</div>
 				</section>
 
 			</div>
+
+		</div>
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
