--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/developerjp/" class="icon brands fa-linkedin" aria-label="LinkedIn Profile"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/jpark8215" class="icon brands fa-github" aria-label="GitHub Profile"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:contact@dataanalytics.com" class="icon solid fa-envelope" aria-label="Email Contact"><span class="label">Email</span></a></li>
 				</ul>
 			</footer>
 		</section>
@@ -148,9 +149,9 @@
 						</header>
 						<div class="features">
 							<article class="feature-article">
-								<a href="business-intelligence/bi-tools.html" class="image">
-									<img src="images/pic03.png" alt="BI Tools and Technology" />
-								</a>
+								<div class="icon-container">
+									<i class="fas fa-chart-line"></i>
+								</div>
 								<div class="inner">
 									<h4><a href="business-intelligence/bi-tools.html">BI Tools and Technology</a></h4>
 									<p>Leverage cutting-edge BI tools and technology to gain deeper insights and drive strategic business decisions. Explore modern platforms like Tableau, Power BI, and Looker.</p>
@@ -158,9 +159,9 @@
 								</div>
 							</article>
 							<article class="feature-article">
-								<a href="business-intelligence/data-management.html" class="image">
-									<img src="images/pic01.png" alt="Data Management" />
-								</a>
+								<div class="icon-container">
+									<i class="fas fa-database"></i>
+								</div>
 								<div class="inner">
 									<h4><a href="business-intelligence/data-management.html">Data Management</a></h4>
 									<p>Ensure your data is accurate, accessible, and secure, enabling better decision-making and operational efficiency across your organization.</p>
@@ -168,9 +169,9 @@
 								</div>
 							</article>
 							<article class="feature-article">
-								<a href="business-intelligence/performance-management.html" class="image">
-									<img src="images/pic02.png" alt="Performance Management" />
-								</a>
+								<div class="icon-container">
+									<i class="fas fa-bullseye"></i>
+								</div>
 								<div class="inner">
 									<h4><a href="business-intelligence/performance-management.html">Performance Management</a></h4>
 									<p>Optimize your business performance with advanced management solutions, tailored to meet your organizational goals and KPIs.</p>
@@ -190,6 +191,13 @@
 						</header>
 						<div class="contact-content">
 							<div class="contact-info">
+								<div class="contact-item">
+									<i class="fas fa-envelope"></i>
+									<div>
+										<h4>Email</h4>
+										<p><a href="mailto:contact@dataanalytics.com">contact@dataanalytics.com</a></p>
+									</div>
+								</div>
 								<div class="contact-item">
 									<i class="fab fa-linkedin"></i>
 									<div>
@@ -213,7 +221,7 @@
 				<section id="footer">
 					<div class="container">
 						<ul class="copyright">
-							<li>&copy; 2025 Data Analytics and Beyond. All rights reserved.</li>
+							<li>&copy; 2024 Data Analytics and Beyond. All rights reserved.</li>
 							<li>Professional Analytics Solutions</li>
 						</ul>
 					</div>
