--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 									<p>Transform raw data into actionable insights</p>
 								</div>
 								<div class="feature-card">
-									<i class="fas fa-robot"></i>
-									<h4>AI/ML Solutions</h4>
-									<p>Leverage artificial intelligence for business growth</p>
-								</div>
-								<div class="feature-card">
 									<i class="fas fa-database"></i>
 									<h4>Data Management</h4>
 									<p>Secure, scalable, and efficient data infrastructure</p>
+								</div>
+								<div class="feature-card">
+									<i class="fas fa-robot"></i>
+									<h4>AI/ML Solutions</h4>
+									<p>Leverage artificial intelligence for business growth</p>
 								</div>
 							</div>
 						</div>
@@ -151,7 +151,7 @@
 								<div class="icon-container">
 									<i class="fas fa-chart-line"></i>
 								</div>
-								<div class="inner">
+								<div class="center">
 									<h4><a href="business-intelligence/bi-tools.html">BI Tools and Technology</a></h4>
 									<p>Leverage cutting-edge BI tools and technology to gain deeper insights and drive strategic business decisions. Explore modern platforms like Tableau, Power BI, and Looker.</p>
 									<a href="business-intelligence/bi-tools.html" class="button small">Explore Tools</a>
