--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 								<div class="icon-container">
 									<i class="fas fa-chart-line"></i>
 								</div>
-								<div class="center">
+								<div class="inner">
 									<h4><a href="business-intelligence/bi-tools.html">BI Tools and Technology</a></h4>
 									<p>Leverage cutting-edge BI tools and technology to gain deeper insights and drive strategic business decisions. Explore modern platforms like Tableau, Power BI, and Looker.</p>
 									<a href="business-intelligence/bi-tools.html" class="button small">Explore Tools</a>
