--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<header>
 				<span class="image avatar"><img src="images/avatar.png" alt="Data Analytics Professional" /></span>
 				<h1 id="logo"><a href="#">Data Analytics & Beyond</a></h1>
-				<p>Transforming Business Through Data-Driven Insights</p>
+				<p>Transforming Business Through Data-Informed Insights</p>
 			</header>
 			<nav id="nav">
 				<ul>
@@ -182,7 +182,7 @@
 					<div class="container">
 						<header class="major">
 							<h3>Get In Touch</h3>
-							<p>Ready to transform your business with data-driven insights?</p>
+							<p>Ready to transform your business with data-informed insights?</p>
 						</header>
 						<div class="contact-content">
 							<div class="contact-info">
