--- a/solutions/machine-learning.html
+++ b/solutions/machine-learning.html
@@ -17,7 +17,7 @@
         <header>
             <span class="image avatar"><img src="../images/avatar.png" alt="Data Analytics Professional" /></span>
             <h1 id="logo"><a href="../index.html">Data Analytics & Beyond</a></h1>
-            <p>Transforming Business Through Data-Driven Insights</p>
+            <p>Transforming Business Through Data-Informed Insights</p>
         </header>
         <nav id="nav">
             <ul>
@@ -31,7 +31,6 @@
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/developerjp/" class="icon brands fa-linkedin" aria-label="LinkedIn Profile"><span class="label">LinkedIn</span></a></li>
                 <li><a href="https://github.com/jpark8215" class="icon brands fa-github" aria-label="GitHub Profile"><span class="label">GitHub</span></a></li>
-                <li><a href="mailto:contact@dataanalytics.com" class="icon solid fa-envelope" aria-label="Email Contact"><span class="label">Email</span></a></li>
             </ul>
         </footer>
     </section>
