--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
 									<i class="fab fa-linkedin"></i>
 									<div>
 										<h4>LinkedIn</h4>
-										<p><a href="https://www.linkedin.com/in/developerjp/" target="_blank">Connect with us</a></p>
+										<p><a href="https://www.linkedin.com/in/developerjp/" target="_blank">Connect with me</a></p>
 									</div>
 								</div>
 								<div class="contact-item">
 									<i class="fab fa-github"></i>
 									<div>
 										<h4>GitHub</h4>
-										<p><a href="https://github.com/jpark8215" target="_blank">View our projects</a></p>
+										<p><a href="https://github.com/jpark8215" target="_blank">View my projects</a></p>
 									</div>
 								</div>
 							</div>
