--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 				<!-- One -->
 				<section id="one">
-<!-- 					<div class="container"> -->
+					<div class="container">
 						<header class="major">
 							<h2>Data Analytics and Beyond</h2>
 							<p>Empowering businesses with cutting-edge analytics, AI, and machine learning solutions</p>
@@ -72,7 +72,7 @@
 								</div>
 							</div>
 						</div>
-<!-- 					</div> -->
+					</div>
 				</section>
 
 				<!-- Two -->
