--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<div class="hero-content">
 							<p>Whether you're a seasoned professional or just starting your data journey, this platform offers comprehensive insights, tutorials, and resources to help you navigate the ever-evolving world of data science, analytics, and cutting-edge technology. Our curated content keeps you updated with the latest trends while providing practical solutions for real-world challenges.</p>
 							
-							<div class="key-features">
+<!-- 							<div class="key-features">
 								<div class="feature-card">
 									<i class="fas fa-chart-line"></i>
 									<h4>Advanced Analytics</h4>
@@ -70,7 +70,7 @@
 									<h4>AI/ML Solutions</h4>
 									<p>Leverage artificial intelligence for business growth</p>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</section>
