--- a/index.html
+++ b/index.html
@@ -108,25 +108,25 @@
 								<a href="solutions/big-data.html" class="button small">Learn More</a>
 							</div>
 							<div class="solution-card">
-								<div class="solution-icon">
+<!-- 								<div class="solution-icon">
 									<i class="fas fa-cloud"></i>
-								</div>
+								</div> -->
 								<h4><a href="solutions/cloud-ai.html">Cloud AI Solutions</a></h4>
 								<p>Cloud-native AI services for scalable and cost-effective deployments</p>
 								<a href="solutions/cloud-ai.html" class="button small">Learn More</a>
 							</div>
 							<div class="solution-card">
-								<div class="solution-icon">
+<!-- 								<div class="solution-icon">
 									<i class="fas fa-brain"></i>
-								</div>
+								</div> -->
 								<h4><a href="solutions/machine-learning.html">Machine Learning Models</a></h4>
 								<p>Custom ML models tailored to your specific business needs</p>
 								<a href="solutions/machine-learning.html" class="button small">Learn More</a>
 							</div>
 							<div class="solution-card">
-								<div class="solution-icon">
+<!-- 								<div class="solution-icon">
 									<i class="fas fa-network-wired"></i>
-								</div>
+								</div> -->
 								<h4><a href="solutions/neural-networks.html">Neural Networks</a></h4>
 								<p>Deep learning solutions for complex pattern recognition and prediction</p>
 								<a href="solutions/neural-networks.html" class="button small">Learn More</a>
