--- a/index.html
+++ b/index.html
@@ -108,25 +108,25 @@
 								<a href="solutions/big-data.html" class="button small">Learn More</a>
 							</div>
 							<div class="solution-card">
-<!-- 								<div class="solution-icon">
+								<div class="solution-icon">
 									<i class="fas fa-cloud"></i>
-								</div> -->
+								</div>
 								<h4><a href="solutions/cloud-ai.html">Cloud AI Solutions</a></h4>
 								<p>Cloud-native AI services for scalable and cost-effective deployments</p>
 								<a href="solutions/cloud-ai.html" class="button small">Learn More</a>
 							</div>
 							<div class="solution-card">
-<!-- 								<div class="solution-icon">
+								<div class="solution-icon">
 									<i class="fas fa-brain"></i>
-								</div> -->
+								</div>
 								<h4><a href="solutions/machine-learning.html">Machine Learning Models</a></h4>
 								<p>Custom ML models tailored to your specific business needs</p>
 								<a href="solutions/machine-learning.html" class="button small">Learn More</a>
 							</div>
 							<div class="solution-card">
-<!-- 								<div class="solution-icon">
+								<div class="solution-icon">
 									<i class="fas fa-network-wired"></i>
-								</div> -->
+								</div>
 								<h4><a href="solutions/neural-networks.html">Neural Networks</a></h4>
 								<p>Deep learning solutions for complex pattern recognition and prediction</p>
 								<a href="solutions/neural-networks.html" class="button small">Learn More</a>
@@ -144,9 +144,9 @@
 						</header>
 						<div class="features">
 							<article class="feature-article">
-								<div class="icon-container">
+<!-- 								<div class="icon-container">
 									<i class="fas fa-chart-line"></i>
-								</div>
+								</div> -->
 								<div class="inner">
 									<h4><a href="business-intelligence/bi-tools.html">BI Tools and Technology</a></h4>
 									<p>Leverage cutting-edge BI tools and technology to gain deeper insights and drive strategic business decisions. Explore modern platforms like Tableau, Power BI, and Looker.</p>
@@ -154,9 +154,9 @@
 								</div>
 							</article>
 							<article class="feature-article">
-								<div class="icon-container">
+<!-- 								<div class="icon-container">
 									<i class="fas fa-database"></i>
-								</div>
+								</div> -->
 								<div class="inner">
 									<h4><a href="business-intelligence/data-management.html">Data Management</a></h4>
 									<p>Ensure your data is accurate, accessible, and secure, enabling better decision-making and operational efficiency across your organization.</p>
@@ -164,9 +164,9 @@
 								</div>
 							</article>
 							<article class="feature-article">
-								<div class="icon-container">
+<!-- 								<div class="icon-container">
 									<i class="fas fa-bullseye"></i>
-								</div>
+								</div> -->
 								<div class="inner">
 									<h4><a href="business-intelligence/performance-management.html">Performance Management</a></h4>
 									<p>Optimize your business performance with advanced management solutions, tailored to meet your organizational goals and KPIs.</p>
